instructions: Add separate type for calls

--- a/src/gtk/emilpro.glade
+++ b/src/gtk/emilpro.glade
@@ -208,6 +208,9 @@
         <col id="0" translatable="yes">Control flow</col>
       </row>
       <row>
+        <col id="0" translatable="yes">Call</col>
+      </row>
+      <row>
         <col id="0" translatable="yes">Data handling</col>
       </row>
       <row>
