--- a/src/gtk/emilpro.glade
+++ b/src/gtk/emilpro.glade
@@ -663,31 +663,54 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkScrolledWindow" id="source_view_scrolled_window">
-                                <property name="height_request">210</property>
+                              <object class="GtkBox" id="box5">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="window_placement_set">True</property>
-                                <property name="kinetic_scrolling">False</property>
+                                <property name="orientation">vertical</property>
                                 <child>
-                                  <object class="GtkSourceView" id="source_view">
+                                  <object class="GtkLabel" id="source_filename_label">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="has_tooltip">True</property>
-                                    <property name="editable">False</property>
-                                    <property name="left_margin">2</property>
-                                    <property name="right_margin">2</property>
-                                    <property name="cursor_visible">False</property>
-                                    <property name="show_line_numbers">True</property>
-                                    <property name="tab_width">4</property>
-                                    <property name="auto_indent">True</property>
-                                    <property name="highlight_current_line">True</property>
-                                    <property name="indent_on_tab">False</property>
                                   </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkScrolledWindow" id="source_view_scrolled_window">
+                                    <property name="height_request">210</property>
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="window_placement_set">True</property>
+                                    <property name="kinetic_scrolling">False</property>
+                                    <child>
+                                      <object class="GtkSourceView" id="source_view">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">False</property>
+                                        <property name="has_tooltip">True</property>
+                                        <property name="editable">False</property>
+                                        <property name="left_margin">2</property>
+                                        <property name="right_margin">2</property>
+                                        <property name="cursor_visible">False</property>
+                                        <property name="show_line_numbers">True</property>
+                                        <property name="tab_width">4</property>
+                                        <property name="auto_indent">True</property>
+                                        <property name="highlight_current_line">True</property>
+                                        <property name="indent_on_tab">False</property>
+                                      </object>
+                                    </child>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">1</property>
+                                  </packing>
                                 </child>
                               </object>
                               <packing>
-                                <property name="resize">False</property>
+                                <property name="resize">True</property>
                                 <property name="shrink">True</property>
                               </packing>
                             </child>
